[gd_scene load_steps=31 format=3 uid="uid://cydy5wvvioivi"]

[ext_resource type="Texture2D" uid="uid://dilph5mebhish" path="res://Images/GameBG.jpg" id="1_8nj2d"]
[ext_resource type="Script" uid="uid://cfy3xatarpwoi" path="res://Scripts/Basic/Pause.gd" id="1_xwjqh"]
[ext_resource type="Texture2D" uid="uid://bfp5pnr8gwyx7" path="res://Images/QuizBG2.png" id="2_5ka2x"]
[ext_resource type="FontFile" uid="uid://cuao14s32x006" path="res://Fonts/Caroni-Regular.otf" id="4_72bda"]
[ext_resource type="Texture2D" uid="uid://dwnnlial0w88q" path="res://Images/GameEx0.png" id="5_ryv57"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dpxoa"]
bg_color = Color(1, 1, 1, 0.843137)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ui5y7"]
bg_color = Color(0.00392157, 0.380392, 0.180392, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 12
border_color = Color(0.00392157, 0.196078, 0.12549, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2s3yy"]
bg_color = Color(0.00392157, 0.235294, 0.12549, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 12
border_color = Color(0.00392157, 0.188235, 0.121569, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lu4io"]
bg_color = Color(0.00784314, 0.282353, 0.188235, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 12
border_color = Color(0.00392157, 0.196078, 0.12549, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8pbpx"]
bg_color = Color(0.384314, 0.384314, 0.0392157, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 12
border_color = Color(0.294118, 0.294118, 0.0235294, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_clxig"]
bg_color = Color(0.321569, 0.321569, 0.027451, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 12
border_color = Color(0.266667, 0.266667, 0.0196078, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cxjej"]
bg_color = Color(0.345098, 0.345098, 0.0313726, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 12
border_color = Color(0.294118, 0.294118, 0.0235294, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qu6xl"]
bg_color = Color(0.490196, 0, 0.490196, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 12
border_color = Color(0.34902, 0, 0.34902, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wfjqo"]
bg_color = Color(0.411765, 0, 0.411765, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 12
border_color = Color(0.317647, 0, 0.317647, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vcvm2"]
bg_color = Color(0.435294, 0, 0.435294, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 12
border_color = Color(0.34902, 0, 0.34902, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m7i0v"]
bg_color = Color(0, 0.560784, 0.890196, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 12
border_color = Color(0, 0.411765, 0.658824, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i15xf"]
bg_color = Color(0, 0.454902, 0.72549, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 12
border_color = Color(0, 0.411765, 0.658824, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eyqf2"]
bg_color = Color(0, 0.521569, 0.827451, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 12
border_color = Color(0, 0.411765, 0.658824, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7nu8s"]
bg_color = Color(0.619608, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 12
border_color = Color(0.482353, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a51b6"]
bg_color = Color(0.501961, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 12
border_color = Color(0.466667, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_47utx"]
bg_color = Color(0.552941, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 12
border_color = Color(0.482353, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="Animation" id="Animation_5dui4"]
resource_name = "PopOut"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1.2, 1.2), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_ab6qr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yb21l"]
_data = {
&"PopOut": SubResource("Animation_5dui4"),
&"RESET": SubResource("Animation_ab6qr")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_iyobq"]
bg_color = Color(0, 0.560784, 0.890196, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 12
border_color = Color(0, 0.411765, 0.658824, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d00t3"]
bg_color = Color(0, 0.454902, 0.72549, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 12
border_color = Color(0, 0.411765, 0.658824, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fscqj"]
bg_color = Color(0, 0.521569, 0.827451, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 12
border_color = Color(0, 0.411765, 0.658824, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="Animation" id="Animation_g17wd"]
resource_name = "PopUp"
length = 1.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Instructions:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1.2, 1.2), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_dxw7j"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Instructions:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_a1q45"]
_data = {
&"PopUp": SubResource("Animation_g17wd"),
&"RESET": SubResource("Animation_dxw7j")
}

[node name="Pause" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(360, 240)
script = ExtResource("1_xwjqh")

[node name="TextureRect2" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 720.0
offset_bottom = 480.0
texture = ExtResource("2_5ka2x")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.25098, 0.25098, 0.25098, 0.356863)

[node name="TextureRect" type="TextureRect" parent="."]
self_modulate = Color(1, 1, 1, 0.333333)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_8nj2d")
expand_mode = 1

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -185.0
offset_top = -190.0
offset_right = 197.0
offset_bottom = 209.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_dpxoa")

[node name="RichTextLabel" type="RichTextLabel" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -124.5
offset_right = 124.5
offset_bottom = 107.0
grow_horizontal = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/normal_font = ExtResource("4_72bda")
theme_override_font_sizes/normal_font_size = 90
bbcode_enabled = true
text = "[center]Paused[/center]"

[node name="resumeButton" type="Button" parent="Panel"]
modulate = Color(0, 1, 0, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -81.0
offset_top = -109.5
offset_right = 87.0
offset_bottom = -39.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_72bda")
theme_override_font_sizes/font_size = 45
theme_override_styles/hover = SubResource("StyleBoxFlat_ui5y7")
theme_override_styles/pressed = SubResource("StyleBoxFlat_2s3yy")
theme_override_styles/normal = SubResource("StyleBoxFlat_lu4io")
text = "Resume"

[node name="restartButton" type="Button" parent="Panel"]
modulate = Color(0.882353, 1, 0, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -81.0
offset_top = -34.5
offset_right = 87.0
offset_bottom = 35.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_72bda")
theme_override_font_sizes/font_size = 45
theme_override_styles/hover = SubResource("StyleBoxFlat_8pbpx")
theme_override_styles/pressed = SubResource("StyleBoxFlat_clxig")
theme_override_styles/normal = SubResource("StyleBoxFlat_cxjej")
text = "Restart"

[node name="menuButton" type="Button" parent="Panel"]
modulate = Color(0.917647, 0, 1, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -81.0
offset_top = 115.5
offset_right = 87.0
offset_bottom = 185.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_72bda")
theme_override_font_sizes/font_size = 45
theme_override_styles/hover = SubResource("StyleBoxFlat_qu6xl")
theme_override_styles/pressed = SubResource("StyleBoxFlat_wfjqo")
theme_override_styles/normal = SubResource("StyleBoxFlat_vcvm2")
text = "Main menu
"

[node name="howToButton" type="Button" parent="Panel"]
modulate = Color(0.596078, 0.952941, 0.956863, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -81.0
offset_top = 40.5
offset_right = 87.0
offset_bottom = 110.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_72bda")
theme_override_font_sizes/font_size = 45
theme_override_styles/hover = SubResource("StyleBoxFlat_m7i0v")
theme_override_styles/pressed = SubResource("StyleBoxFlat_i15xf")
theme_override_styles/normal = SubResource("StyleBoxFlat_eyqf2")
text = "How-to"

[node name="exitButton" type="Button" parent="Panel"]
visible = false
modulate = Color(0.780392, 0, 0, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -83.0
offset_top = 192.5
offset_right = 85.0
offset_bottom = 262.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_72bda")
theme_override_font_sizes/font_size = 45
theme_override_styles/hover = SubResource("StyleBoxFlat_7nu8s")
theme_override_styles/pressed = SubResource("StyleBoxFlat_a51b6")
theme_override_styles/normal = SubResource("StyleBoxFlat_47utx")
text = "Exit game"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_yb21l")
}

[node name="Instructions" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 720.0
offset_bottom = 480.0
pivot_offset = Vector2(351, 240)

[node name="TextureRect3" type="TextureRect" parent="Instructions"]
layout_mode = 0
offset_right = 720.0
offset_bottom = 480.0
texture = ExtResource("2_5ka2x")

[node name="ColorRect2" type="ColorRect" parent="Instructions"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.25098, 0.25098, 0.25098, 0.356863)

[node name="TextureRect4" type="TextureRect" parent="Instructions"]
self_modulate = Color(1, 1, 1, 0.333333)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_8nj2d")
expand_mode = 1

[node name="HowTo" type="TextureRect" parent="Instructions"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -275.0
offset_top = 25.0
offset_right = 275.0
offset_bottom = 377.0
grow_horizontal = 2
texture = ExtResource("5_ryv57")
expand_mode = 1

[node name="BackButton" type="Button" parent="Instructions"]
modulate = Color(0.596078, 0.952941, 0.956863, 1)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -201.0
offset_top = -83.0
offset_right = -28.0
offset_bottom = -14.0
grow_horizontal = 0
grow_vertical = 0
theme_override_fonts/font = ExtResource("4_72bda")
theme_override_font_sizes/font_size = 50
theme_override_styles/hover = SubResource("StyleBoxFlat_iyobq")
theme_override_styles/pressed = SubResource("StyleBoxFlat_d00t3")
theme_override_styles/normal = SubResource("StyleBoxFlat_fscqj")
text = "Back"

[node name="InstructionsAnimationPlayer" type="AnimationPlayer" parent="Instructions"]
root_node = NodePath("../..")
libraries = {
&"": SubResource("AnimationLibrary_a1q45")
}

[connection signal="pressed" from="Panel/resumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="Panel/restartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="Panel/menuButton" to="." method="_on_menu_button_pressed"]
[connection signal="pressed" from="Panel/howToButton" to="." method="_on_how_to_button_pressed"]
[connection signal="pressed" from="Instructions/BackButton" to="." method="_on_back_button_pressed"]
